--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "copolio-portfolio",
   "version": "0.1.0",
   "private": true,
+  "license": "CC-BY-NC-ND-4.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
